Made the search elements centered correctly. Although this makes the title look misaligned

--- a/src/components/SearchCard/SearchCard.css
+++ b/src/components/SearchCard/SearchCard.css
@@ -17,14 +17,21 @@ input[type="text"]::placeholder {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  margin: 0;
 }
-.column {
+.search-input {
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
-  flex: 1;
+  flex: 2 0 0%;
+  margin: 0 10px 0 10px;
+}
+.btn-submit {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1 0 0%;
   margin: 0 10px 0 10px;
 }
 .form-control {
